--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,9 @@
-body {
+body,
+body * {
+  padding: 0;
+  vertical-align: top;
+  box-sizing: border-box;
+  word-break: break-all;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,7 +11,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
