--- a/src/css/Dictionary.css
+++ b/src/css/Dictionary.css
@@ -1,9 +1,18 @@
-/* div.search-block {
-
-} */
-
+/* SECTIONS */
+form,
+section,
 div.search-block form {
-  padding: 10px 0;
+  background-color: #f6e6e4;
+  margin: 30px 0;
+  padding: 30px 50px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+
+
+/* SEARCH BLOCK */
+div.search-block form {
+  padding: 15px 0;
 }
 div.search-block form input {
   padding: 3px 5px 3px 7px;
