--- a/src/css/Results.css
+++ b/src/css/Results.css
@@ -1,4 +1,8 @@
 h2 {
-  display: inline-block;
-  margin: 10px 0;
+  display: block;
+  font-size: 32px;
+  margin-bottom: 5px;
+}
+h4 {
+  margin-bottom: 7px;
 }
