--- a/src/css/Synonyms.css
+++ b/src/css/Synonyms.css
@@ -1,10 +1,11 @@
 ul {
   list-style-type: none; 
-  margin: 10px 0 30px;
-  margin-left: calc((100% - 510px) / 2);
-  display: grid;
-  grid-template-columns: 170px 170px 170px;
+  font-size: 15px;
+  margin: 2px 0 5px;
+  font-weight: 600;
 }
-/* li {
-
-} */
+li {
+  display: inline-block;
+  margin: 0px 10px;
+  font-weight: 400;
+}
