--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,13 +3,15 @@ body * {
   padding: 0;
   vertical-align: top;
   box-sizing: border-box;
-  word-break: break-all;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+body{
+  background-color: #e2bcb7;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
