--- a/src/css/Meaning.css
+++ b/src/css/Meaning.css
@@ -8,10 +8,12 @@ section.meaning-block div.meaning-each {
 }
 
 section.meaning-block p span{
-  margin: 5px 0;
+  margin: 5px 0 10px;
+  display: inline block;
   color: black;
   font-size: 16px;
   font-style: normal;
+
 }
 
 section.meaning-block p {
@@ -19,4 +21,10 @@ section.meaning-block p {
   font-style: italic;
   color: rgba(0, 0, 0, 0.67);
   margin-top: 27px;
+}
+section.meaning-block strong {
+  color: #212529;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
 }
