--- a/src/css/Dictionary.css
+++ b/src/css/Dictionary.css
@@ -3,7 +3,7 @@ form,
 section,
 div.search-block form {
   background-color: #f6e6e4;
-  margin: 30px 0;
+  margin: 15px 0 30px;
   padding: 30px 50px;
   border-radius: 10px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
