--- a/src/css/Meaning.css
+++ b/src/css/Meaning.css
@@ -8,8 +8,7 @@ section.meaning-block div.meaning-each {
 }
 
 section.meaning-block p span{
-  margin: 5px 0 10px;
-  display: inline block;
+  margin: 5px 0;
   color: black;
   font-size: 16px;
   font-style: normal;
