--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,6 +14,7 @@ body{
   /* background-color: #e2bcb7; */
   background-image: url("../img/wood3.jpg");
   background-repeat: repeat;
+  background-attachment: fixed;
   /* background-position: center; Center the image */
   background-size:100%;
 }
