--- a/src/css/Phonetic.css
+++ b/src/css/Phonetic.css
@@ -10,9 +10,10 @@ div.phonetic-block {
 div.phonetic-block span {
   font-size: 20px;
   line-height: 27px;
+  margin-right: 7px;
 }
 
-div.phonetic-block a {
+/* div.phonetic-block a {
   font-size: 15px;
   border-radius: 15px;
   margin-left: 7px;
@@ -24,8 +25,14 @@ div.phonetic-block a {
   box-shadow: 0px 0px 5px rgba(78, 11, 11, 0.2);
   border: 1px solid rgb(226, 188, 183);
   transition: 300ms ease;
-}
+} */
 div.phonetic-block a:hover{
   box-shadow: none;
 }
-
+.audio-player{
+  height: 30px;
+  width: 175px;
+  box-shadow: 0px 0px 5px rgba(78, 11, 11, 0.2);
+  border: 1px solid rgba(226, 188, 183, 0.5);
+  border-radius: 15px;
+}
