--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,18 +1,41 @@
+/* div.App { */
+  /* width: 700px;
+  margin-left: calc((100% - 700px) / 2); */
+/* } */
 
 
-
-
-
-
-@media(max-width: 560px){
-
+@media(max-width: 655px){
+  div.App{
+    min-width: 300px;
+    width: 90%;
+    margin-left: 5%;
+  }
+  section.photos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px 10px
+  }
 }
-@media(min-width: 560px){
-
+@media(min-width: 655px){
+  div.App{
+    width: 600px;
+    margin-left: calc((100% - 600px) / 2);
+  }
+  section.photos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px 10px
+  }
 }
-@media(min-width: 750px){
-
+@media(min-width: 900px){
+  div.App{
+    width: 800px;
+    margin-left: calc((100% - 800px) / 2);
+  }
 }
-@media(min-width: 1000px){
-
+@media(min-width: 1200px){
+  div.App{
+    width: 900px;
+    margin-left: calc((100% - 900px) / 2);
+  }
 }
