--- a/src/css/Dictionary.css
+++ b/src/css/Dictionary.css
@@ -2,7 +2,7 @@
 form,
 section,
 div.search-block form {
-  background-color: #f6e6e4;
+  background-color: rgb(246, 230, 228, 0.9);
   margin: 15px 0 30px;
   padding: 30px 50px;
   border-radius: 10px;
